src/table/table.styl
.table-loading-container
  display flex
  align-items center
  justify-content center
  height 4px
  position sticky
  top 0
  z-index 4

  .MuiLinearProgress-root
    height 4px
    width 100%
    margin-left 29px
    
.table
  position relative
  padding-left 96px
  width fit-content

  .table-top-container
    display flex
    align-items center
    justify-content space-between
    position sticky
    left 23px
    width fit-content
    padding-top 12px
    padding-bottom 8px
    z-index 3

  .table-state-container
    display flex
    align-items center
    .table-state-item
      border-radius 14px
      margin-right 6px
      display inline-flex
      .table-state-item-content
        user-select none
        transition background 20ms ease-in 0s
        cursor pointer
        font-size 14px
        display inline-flex
        align-items center
        justify-content center
        white-space nowrap
        border-radius 32px
        height 24px
        line-height 24px
        padding 0px 8px
        border 1px solid rgba(35, 131, 226, 0.35)
        color rgb(35, 131, 226)
        background rgba(35, 131, 226, 0.03)
        svg
          position relative
          height 0.8em
          width 0.8em

  .table-top-container-body
    display flex
    justify-content flex-start
    padding 2px 8px
    padding-right 96px
    align-items center
    min-width fit-content

    .table-view-menu
      margin-right 8px
      min-width fit-content

  &.noselect
    -webkit-touch-callout none
    -webkit-user-select none
    -khtml-user-select none
    -moz-user-select none
    -ms-user-select none
    user-select none

  .row
    display flex
    height 100%
    width fit-content

    .cell
      white-space nowrap
      margin 0 
      border-right 1px solid $borderColor
      position relative
      cursor pointer
      display flex
      align-items center
      justify-content center

      &.group_end
        border-right 1px solid $borderColor

      &.sorted
        background-color rgba(255, 255, 204, 0.6)

      &.sticky
        position sticky
        left 0
        z-index 1
        background-color inherit

    .cell-content
      height 100%
      overflow hidden
      text-overflow ellipsis
      white-space nowrap
      padding 0 8px
      max-width 100%

  .body
    .cell
      &:hover
        background-color #b9d4ff

    .row
      &:hover
        background-color white

  .header
    width fit-content
    position sticky
    top -1px
    z-index 2
    font-size 11px
    font-weight 800
    letter-spacing 1px
    text-transform uppercase

    .row
      height 24px

    .cell
      line-height 120%
      background-color $backgroundColor

    .cell:not(.column-index)
      border-right 1px solid $borderColor

      &.border_bottom
        border-bottom 1px solid $borderColor

    .row:nth-child(1) .cell:not(.column-index)
      border-top 1px solid $borderColor

  .footer
    height 33px
    width fit-content
    position sticky
    bottom 0
    z-index 1
    .cell
      border-top 1px solid $borderColor
      background-color $backgroundColor

  .resizer
    display inline-block
    background transparent
    width 8px
    height 100%
    position absolute
    right 0
    top 0
    transform translateX(50%)
    z-index 1
    cursor col-resize
    touch-action none

    &:hover
      background-color #8ecae6

  .header-icon
    margin-right 4px

  .header-sort-icon
    margin-left 4px

  .header-icon
  .header-sort-icon
    svg
      position relative
      height 0.9em
      width 0.9em
      top 0.125rem

  .cell.column-index
    width 30px
    font-size 9px
    border-top none
    border-bottom none
    background transparent
    .cell-content
      display flex
      align-items center

  .table-quick-filters
    margin 0 30px 6px
    display flex
    padding 0 8px
    flex-direction column
    border-radius 4px
    border 1px solid transparent
    width fit-content
    position sticky
    left 30px

    &:hover
    &.-open
      border 1px solid rgba(0, 0, 0, 0.23)

    .quick-filter-items
      display flex
      flex-wrap wrap

  .filters-expand-button
    height 24px
    margin-bottom 4px
    display flex
    align-items center
    justify-content center
    width fit-content
    cursor pointer

.table-controls-container
  position relative
  height 40px
  width 40px

.table-state-change-controls
  position absolute
  left 362px
  top 4px
  display flex
  flex-direction row
  align-items center
  justify-content center
  gap 8px
  height 32px

.rank-aggregation-controls-visible .table-state-change-controls
  left 326px

.table-state-change-control-button
  padding 0 8px
  cursor pointer
  height 28px
  gap 4px
  font-size 12px
  font-weight 500
  display flex
  align-items center
  justify-content center
  box-shadow rgba(31, 35, 40, 0.04) 0px 1px 0px 0px
  border 1px solid rgb(208, 215, 224)
  border-radius 6px
  transition box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms

  &.discard
    background-color rgb(246, 248, 250)
  &.save
    color white
    background-color rgb(31, 136, 61)
    border-color rgba(31, 35, 40, 0.15)

  &:hover
    box-shadow #D0D0D0 4px 4px 0px 0px

@media (min-width: 769px)
  .table
    padding-top 48px

